--- a/web/CSS/Login.css
+++ b/web/CSS/Login.css
@@ -1,125 +1,190 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto;
 }
-body{
+
+body {
     min-height: 100vh;
 }
-#boasVindas{
-display: flex;
-min-height: 100vh;
-width: 100%;
+
+#boasVindas {
+    display: flex;
+    min-height: 100vh;
+    width: 100%;
 }
 
-#mensagem{
-background: linear-gradient(to bottom, #e9d5ff, #c4b5fd);
-display: flex;
-width: 50%;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 2.5vw;
+#mensagem {
+    background: linear-gradient(to bottom, #e9d5ff, #c4b5fd);
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2.5vw;
 }
-#tituloMensagem{
+
+#tituloMensagem {
     max-width: 400px;
 }
-#mensagem h1{
+
+#mensagem h1 {
     font-size: 5vw;
-    font-weight: bold;
+    font-family: "Nunito Sans", sans-serif;
     text-align: center;
     color: #4c1d95;
     margin-bottom: 0.75vw;
 }
 
-#textoMensagem{
+#textoMensagem {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 20px;
     padding: 0.75vw 1.5vw;
     margin-top: 1vw;
     text-align: center;
 }
-#textoMensagem p{
-    color: #000000 ;
+
+#textoMensagem p {
+    color: #000000;
     font-weight: 500;
 }
-#informacoes{
+
+#informacoes {
     width: 50%;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1.5vw 4vw;
 }
-#dados{
-    width: 100%;
+
+#dados {
+    width: 60%;
     max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
-#logo{
+
+#logo {
     display: flex;
     justify-content: center;
     margin-bottom: 3vw;
 }
-#logo img{
+
+#logo img {
     width: 12vw;
 }
-#loginForm, #cadastroForm{
-width: 100%;
+
+#loginForm,
+#cadastroForm {
+    width: 100%;
 }
-.formulario{
-margin-bottom: 1.5vw;
+
+#loginForm {
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
-.formulario label{
+
+.formulario label {
     display: block;
-    margin-bottom: 0.5vw;
+    margin-bottom: 0.88vh;
     color: #6b7280;
 }
-#esqueceu, #confirmarSenha{
+
+.inputText {
+    margin-bottom: 1.5vw;
+}
+
+#esqueceu,
+#confirmarSenha {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 0.5vw;
 }
-#esqueceuSenha{
+
+#esqueceuSenha {
     color: #9ca3af;
 }
-#esqueceuSenha:hover{
+
+#esqueceuSenha:hover {
     color: #8b5cf6;
 }
-input{
-    width:100%;
+
+#loginForm .button {
+    color: #573280;
+    border-color: #573280;
+    background: #FEFEFF;
+    background: linear-gradient(0deg, rgba(254, 254, 255, 0.5) 17%, rgba(155, 140, 219, 0.2) 100%);
+}
+
+#loginForm .button .separator {
+    background-color: #573280;
+
+}
+
+input {
+    width: 100%;
     padding: 0.5vw 1vw;
     border: 1px solid #d1d5db;
     border-radius: 0.3vw;
 }
-input:focus{
+
+input:focus {
     outline: none;
     border-color: #8b5cf6;
     box-shadow: 0 0 0 1px #8b5cf6;
 }
-#colocarSenha{
+
+#colocarSenha,
+#colocarSenha1 {
     position: relative;
 }
-.senhaa{
+
+.senhaa,
+.senhaa senhaa1 {
     position: absolute;
-    top: 0.6vw;
+    top: 0.4vw;
     right: 0.75vw;
     transform: translate(-30%);
-    background:none ;
+    background: none;
     border: none;
     cursor: pointer;
     color: #6b7280;
 }
-.senhaa:hover{
+
+.senhaa:hover {
     color: #8b5cf6;
 }
-#acaoForm{
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+div.mainContent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+#acaoForm {
     padding-top: 1vw;
     display: flex;
     justify-content: center;
+
 }
-#botaoLog, #botaoCad{
+
+#botaoCad {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -131,100 +196,149 @@ input:focus{
     cursor: pointer;
     transition: background-color 0.2s;
 }
-#botaoCad{
+
+#botaoCad {
     padding: 0.8vw;
+    font-size: 1em;
 }
-.icone{
+
+.icone {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.75vw;
 }
-.textoLog{
+
+.textoLog {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-grow: 1;
     padding: 0.75vw 1.5vw;
 }
-#botaoLog:hover{
-    background-color: #f3e8ff;
-}
-#botaoLog svg{
-    margin-right: 0.5vw;
-}
 
-#cadastrar{
-    margin-top: 6vw;
+
+#cadastrar {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* <- isso centraliza horizontalmente */
+    justify-content: flex-end;
+    /* opcional, se quiser no fim do container */
     text-align: center;
-
+    margin-top: auto;
+    padding-top: 2vh;
 }
-#cadastrar p{
+
+#cadastrar p {
     color: #6b7280;
     margin-bottom: 0.25vw;
 }
-#cadastrar a{
+
+#cadastrar a {
     color: #a78bfa;
     text-decoration: none;
 }
-#cadastrar a:hover{
+
+#cadastrar a:hover {
     color: #7c3aed;
 }
+
 /*RESPONSIVO LOGIN*/
-@media (max-width: 600px){
-#boasVindas{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-#mensagem{
-    width: 100%;
-}
-#informacoes{
-    width: 100%;
-    padding: 1.5vw 15vw;
-}
-#mensagem h1{
-    font-size: 12vw;
-    text-align: center;
-    padding: 5vw;
-}
-#textoMensagem{
-    display: none;
-}
-.formulario label{
-    font-size: 4.5vw;
-}
-#esqueceuSenha{
-    font-size: 5vw;
-}
-#cadastrar p, #cadastrar a, #botaoLog{
-    font-size: 5vw;
-}
-#cadastrar{
-    position: absolute;
-    bottom: 0;
-    left: 20vw;
-    margin-bottom: 10vw;
-}
-#logo img{
-    width: 30vw;
-}
-input{
-    width: 100%;
-    font-size: 5.5vw;
-    margin-bottom: 6vw;
-}
-.senhaa{
-    top: 1.5vw;
-}
+@media (max-width: 600px) {
+    #boasVindas {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        background: linear-gradient(to bottom, #e9d5ff, #c4b5fd);
+    }
+
+    #mensagem {
+        background: none;
+        width: 100%;
+        height: 20vh;
+    }
+
+    #informacoes {
+        width: 100%;
+        padding: 1.5vw 15vw;
+        background-color: #FFF;
+        border-radius: 15px 15px 0 0;
+    }
+
+    #loginForm {
+        height: 40%;
+        justify-content: space-evenly;
+    }
+
+    #mensagem h1 {
+        font-size: 12vw;
+        text-align: center;
+        padding: 5vw;
+    }
+
+    #textoMensagem {
+        display: none;
+    }
+
+    .formulario label {
+        font-size: 4.5vw;
+    }
+
+    .inputText {
+        margin-bottom: 5vw;
+    }
+
+    #esqueceuSenha {
+        font-size: 1em;
+    }
+
+    #cadastrar {
+        margin-bottom: 8vw;
+    }
+
+    #cadastrar p,
+    #cadastrar a {
+        font-size: 5vw;
+        margin: 0;
+    }
+
+    #dados {
+        width: 90%;
+        height: 78.8vh;
+        position: relative;
+    }
+
+    #logo {
+        margin: 0;
+    }
+
+    #logo img {
+        width: 36vw;
+    }
+
+    input {
+        width: 100%;
+        font-size: 5.5vw;
+    }
+
+    .senhaa,
+    .senhaa senhaa1 {
+        top: 1.5vw;
+    }
+
+    /*.senhaa1 {
+       top: 103.5vw;
+    }
+       */
 
 
-/*RESPONSIVO CADASTRO*/
-#botaoCad{
-font-size: 5vw;
-padding: 2vw;
-}
+    /*RESPONSIVO CADASTRO*/
+    #botaoCad {
+        padding: 2vw;
+        margin-top: 5vw;
+    }
 }
 
 
