--- a/web/CSS/Login.css
+++ b/web/CSS/Login.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -47,7 +50,7 @@ body {
 
 #textoMensagem p {
     color: #000000;
-    font-weight: 500;
+    font-family: "Roboto", sans-serif;
 }
 
 #informacoes {
@@ -199,7 +202,7 @@ div.mainContent {
 
 #botaoCad {
     padding: 0.8vw;
-    font-size: 1em;
+    font-size: 0.9em;
 }
 
 .icone {
