--- a/web/CSS/Geral.css
+++ b/web/CSS/Geral.css
@@ -1,5 +1,3 @@
-/*HOME*/
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
@@ -33,6 +31,7 @@ header {
     align-items: center;
     justify-content: space-between;
     z-index: 2;
+    overflow: hidden;
 }
 
 #logo {
@@ -61,6 +60,21 @@ header {
     background-size: cover;
 }
 
+#divEventos {
+    width: 90%;
+    height: 1000px;
+    display: flex;
+    flex-direction: row;
+}
+
+#divEventos .caixaHome {
+    width: 47%;
+    height: auto;
+    border-radius: 0px;
+    margin-top: 5vw;
+    background-color: rgba(255, 255, 255, 0.40);
+}
+
 .caixaHome {
     width: 60%;
     height: 100%;
@@ -70,7 +84,6 @@ header {
     background-color: rgba(255, 255, 255, 0.40);
     border-radius: 40px;
     position: relative;
-
 
 }
 
